force-app/main/default/objects/Financing_Term__c/fields/Interest_Free_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Free_End_Date__c</fullName>
    <label>Interest Free End Date</label>
    <type>DateTime</type>
</CustomField>