force-app/main/default/objects/Financing_Term__c/fields/Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Surcharge__c</fullName>
    <label>Surcharge</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>